# cpp-task-runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: heavy_tasks.cpp  latency_benchmark.cpp  scaling_benchmark.cpp  small_tasks.cpp
examples/: basic_usage.cpp  future_example.cpp  parallel_for_example.cpp  parallel_reduce_example.cpp
include/runtime/: config.h  parallel_for.h  parallel_reduce.h  stats.h  task.h  thread_pool.h  work_stealing_queue.h
src/: thread_pool.cpp  work_stealing_queue.cpp  worker.cpp
tests/: shutdown_test.cpp  thread_pool_test.cpp  work_stealing_queue_test.cpp
